@@ -1,3 +1,9 @@
+2009-10-04  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
+
+	* samplebuffer_functions.h (is_almost_equal): Added
+	parameters. New signature still source-compatible with
+	the old one.
+
 2009-04-18  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
 
 	* eca-control-base.h: File removed, ECA_CONTROL_BASE
